Changed imges positions

--- a/Project-01/index.html
+++ b/Project-01/index.html
@@ -55,7 +55,7 @@
     <h2> ABOUT ROCHET DESIGHN</h2> 
     
     <div class="col-left">
-       <img src="file:///home/wiseman7/Desktop/Judith_portfolio/WWW/img/computer-gal.png" alt="juju">
+       <img src="./img/computer-gal.png" alt="juju">
     </div>
     <div class="col-right">
         <h4>©ROCHET DESIGHN</h4>
