a line is modified

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
           </header>
 
           <main role="main" class="inner cover">
-            <h1 class="cover-heading">Judith Moate (Front-End Developer).</h1>
+            <h1 class="cover-heading">Judith Moate (Software Developer).</h1>
             <!--<h2 class="cover-heading-2"> Web Developer.</h2>-->
             <p class="lead">Judith is a twenty-five years old hard working female and a dedicated self taught web developer with strong technical
 skills and marketing background. She is available for a web delopment role. Kindly view some of my projects</p>
@@ -53,7 +53,7 @@ skills and marketing background. She is available for a web delopment role. Kind
           <li><a class="dropdown-item" href="./Project-02/index.html">Project-02</a></li>
           <li><a class="dropdown-item" href="#">Project-03</a></li>
           <li><a class="dropdown-item" href="#">Project-04</a></li>
-          
+
           
             </p>
           </main>
