--- a/project-02/index.html
+++ b/project-02/index.html
@@ -77,8 +77,8 @@
             <img class="second-slide" src="./img/food-salad-healthy-colorful (2).jpg" alt="Second slide">
             <div class="container">
               <div class="carousel-caption">
-                <h1>Another example headline.</h1>
-                <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
+                <h1>LOVE YOUR VEGAN FOOD.</h1>
+                <p></p>
                 <p><a class="btn btn-lg btn-primary" href="#" role="button">Learn more</a></p>
               </div>
             </div>
@@ -142,7 +142,7 @@
           <div class="col-md-7">
             <h2 class="featurette-heading">ABOUT CHEF COLA  <br /> <!--<span class="text-muted">#FOR THE LOVE OF VEGES</span>--></h2>
             <h3><span class="text-muted">AFRICAN VEGAN CHEF</span></h3>
-            <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+            <p class="lead">-----------</p>
           </div>
           <div class="col-md-5">
             <img class="featurette-image img-fluid mx-auto" src="./img/10.jpg" alt="Generic placeholder image">
