--- a/project-02/index.html
+++ b/project-02/index.html
@@ -141,7 +141,7 @@
         <div class="row featurette">
           <div class="col-md-7">
             <h2 class="featurette-heading">ABOUT CHEF COLA  <br /> <!--<span class="text-muted">#FOR THE LOVE OF VEGES</span>--></h2>
-            <h3><span class="text-muted">AFRICAN VEGAN CHEF</span></h3>
+            <h3><span class="text-muted">AFRICAN VEGAN CHEF</span></h3> <!-- some changes here-->
             <p class="lead">-----------</p>
           </div>
           <div class="col-md-5">
