--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 
     <!-- Custom styles for this template -->
     <link href="cover.css" rel="stylesheet">
+    <link href="./vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
   </head>
 
   <body>
@@ -61,7 +62,7 @@ skills and marketing background. She is available for a web delopment role. Kind
 
           <footer class="mastfoot">
             <div class="inner">
-              <p>Contact Judith Moate  <a href="https://tshiamomoate@gmail.com/ ">@GMAIL</a>.</p>
+              <p>Contact Judith Moate  <a href="https://tshiamomoate@gmail.com/">@GMAIL</a>.</p>
             </div>
           </footer>
 
