--- a/project-02/index.html
+++ b/project-02/index.html
@@ -214,7 +214,7 @@
         </div>
       </div>
       <p class="float-right"><a href="#">Back to top</a></p>
-        <p>Website designed by <a href="https://mail.google.com/mail/u/1/#inbox">Judith Moate</a></p>
+        <p>Website designed by <a href="https://judithmoate.github.io/PortFolio/">Judith Moate</a></p>
 
     </section>
       </footer>
